[package]
name = "json-explorer"
version = "0.1.0"
edition = "2021"
authors = ["Alec Nunn <alec.nunn@gmail.com>"]

[dependencies]
eframe = "0.31"
egui = "0.31"
serde_json = "1.0"
rfd = "0.15"
anyhow = "1.0"

[profile.release]
opt-level = 3
lto = true
codegen-units = 1
panic = "abort"
strip = true

[target.'cfg(windows)'.dependencies]
winapi = { version = "0.3", features = ["winuser"] }